Just checking the commit message file.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="box">
             Unlimited movies, TV shows, and more
             Starts at $7.99. Cancel anytime.
-            Ready to watch? Enter your email to create or restart your membership.
+            Ready to watch? Enter your email to create or restart your membershipp.
         </div>
     </div>    
     
