--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="main">
+        <div class="box"></div>
         <nav>
             <span><img width="135" src="Assets/images/logo.svg"></span>
             <div class="flex">
@@ -15,13 +16,11 @@
                 <button>Sign In</button>
             </div>
         </nav>
-    
-        <div class="box">
-            Unlimited movies, TV shows, and more
-            Starts at $7.99. Cancel anytime.
-            Ready to watch? Enter your email to create or restart your membershipp.
+        <div class="hero">
+            <span>Unlimited movies, TV shows, and more.</span>
+            <span>Starts at $7.99. Cancel anytime.</span>
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>   
         </div>
-    </div>    
-    
+    </div>                 
 </body>
 </html>
