Added curved separator, and eddress bars, fixed size

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <div class="box"></div>
@@ -19,8 +21,18 @@
         <div class="hero">
             <span>Unlimited movies, TV shows, and more.</span>
             <span>Starts at $7.99. Cancel anytime.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>   
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div>
+                <input type="text" placeholder="Email address">
+                <button>Get Started</button>
+            </div>
         </div>
-    </div>                 
+        <div class="curved-separator">
+            
+        </div>
+
+        
+
 </body>
+
 </html>
